# Django_oidc_id_provider

./: .gitignore  MANIFEST.in  dev-requirement.txt  manage.py  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
django_oidc_id_provider/: apps.py  models.py  settings.py  urls.py  utils.py  views.py
django_oidc_id_provider/migrations/: 0001_initial.py
django_oidc_id_provider/tests/: test_views.py
django_oidc_id_provider_server/: asgi.py  settings.py  wsgi.py
django_oidc_id_provider_test_bed/: asgi.py  settings.py  urls.py  wsgi.py
