[metadata]
name = django-oidc-id-provider
version = 0.0.1
description =
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
url = https://github.com/betagouv/Django_oidc_id_provider
author = Christophe Henry
author_email = christophe.henry@beta.gouv.fr
classifiers =
    Framework :: Django :: 3.0
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
python_requires = >=3.6
include_package_data = True
packages = find:

[options.packages.find]
exclude =
    django_oidc_id_provider_server
    *.tests

[flake8]
max-line-length = 88
per-file-ignores =
    setup.py:E501
    **/settings.py:E501
